--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,13 @@ address {
 	margin-top: 0;
 	margin-bottom: 0;
 }
-
 figure {
-	margin-bottom: 0;
+	margin-bottom: -15% !important;
+}
+
+figure1 {
+    object-position: bottom;
+	margin-bottom: -15% !important;
 }
 
 html p a:hover {
@@ -103,7 +107,7 @@ body {
 	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	line-height: 1.625;
 	font-weight: 400;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 992px) {
@@ -147,7 +151,7 @@ h1, h2, h3, h4, h5, h6, .heading-1, .heading-2, .heading-3, .heading-4, .heading
 	margin-bottom: 0;
 	font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	font-weight: 800;
-	color: #2a384e;
+	color: #0b092c;
 	text-transform: uppercase;
 	letter-spacing: .5px;
 }
@@ -255,7 +259,7 @@ h4,
 .heading-4 {
 	font-size: 18px;
 	line-height: 1.5;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 768px) {
@@ -279,7 +283,7 @@ h5,
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 1.45;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 768px) {
@@ -294,7 +298,7 @@ h6,
 .heading-6 {
 	font-size: 14px;
 	line-height: 1.6;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 768px) {
@@ -398,7 +402,7 @@ code,
 }
 
 .page .text-dark {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 /*
@@ -428,7 +432,7 @@ code,
 	padding: 0;
 	margin: 0;
 	border-bottom: none;
-	background: #1F2845;
+	background: #000;
 }
 
 .cat-img-group {
@@ -542,8 +546,8 @@ h2 .label {
 
 .page .section-cta .button-primary:hover, .page .section-cta .button-primary:focus, .page .section-cta .button-primary:active, .page .section-cta .button-primary:hover {
 	color: #fff;
-	background-color: #1b2535;
-	border-color: #1b2535;
+	background-color: #F4B754;
+	border-color: #F4B754;
 }
 
 .section-cta h4 + p {
@@ -577,7 +581,7 @@ h2 .label {
 }
 
 .page .icon-default {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .page .icon-gray {
@@ -610,7 +614,7 @@ h2 .label {
 }
 
 .page a.icon-gray-darker {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .page a.icon-gray-darker:hover {
@@ -767,15 +771,15 @@ span.button {
 }
 
 .page .button-default {
-	color: #1F2845;
+	color: #3969a2;
 	background-color: transparent;
 	border-color: #888;
 }
 
 .page .button-default:hover, .page .button-default:focus, .page .button-default:active, .page .button-default:hover {
 	color: #fff;
-	background-color: #1F2845;
-	border-color: #1F2845;
+	background-color: #3969a2;
+	border-color: #3969a2;
 }
 
 .page .button-black {
@@ -792,8 +796,8 @@ span.button {
 
 .page .button-gray-dark {
 	color: #fff;
-	background-color: #2a384e;
-	border-color: #2a384e;
+	background-color: #0b092c;
+	border-color: #0b092c;
 }
 
 .page .button-gray-dark:hover, .page .button-gray-dark:focus, .page .button-gray-dark:active, .page .button-gray-dark:hover {
@@ -961,7 +965,7 @@ span.button {
 	line-height: 1.3;
 	letter-spacing: .06em;
 	text-transform: uppercase;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .box-counter__wrap > * {
@@ -1081,7 +1085,7 @@ span.button {
 		z-index: -1;
 		transform: translateX(-100%);
 		border-radius: 50%;
-		background: #1F2845;
+		background: #3969a2;
 	}
 	.desktop .blurb-circle:hover .blurb-circle__icon .icon::after {
 		transform: translateX(0);
@@ -1474,7 +1478,7 @@ textarea.form-input {
 	right: 6px;
 	bottom: 6px;
 	left: 6px;
-	background: #1F2845;
+	background: #3969a2;
 	border-radius: 50%;
 }
 
@@ -1877,7 +1881,7 @@ textarea.form-input {
 	font: 700 16px "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	line-height: 1.5;
 	letter-spacing: 0;
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .list-terms-inline dt,
@@ -1937,7 +1941,7 @@ textarea.form-input {
 }
 
 .list-terms-modern dd {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .list-terms-modern dd a {
@@ -2038,7 +2042,7 @@ textarea.form-input {
 
 .list-semicolon > li {
 	display: inline;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .list-semicolon a {
@@ -2230,7 +2234,7 @@ textarea.form-input {
 }
 
 .list-archive li a:hover {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .list-archive > li + li {
@@ -2547,7 +2551,7 @@ figure img {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	background: #2a384e;
+	background: #0b092c;
 }
 
 .thumb-creative__front {
@@ -2894,7 +2898,7 @@ a.thumbnail-classic-title:hover {
 	flex-direction: column;
 	justify-content: center;
 	padding: 15px;
-	background-color: rgba(128, 222, 234, 0.6);
+	background-color: rgba(250, 150, 15, 0.5);
 	transition: 250ms ease-in-out;
 }
 
@@ -3451,7 +3455,7 @@ a.thumbnail-classic-title:hover {
 	margin-right: auto;
 	color: #fff;
 	text-align: left;
-	background-color: #1F2845;
+	background-color: #3969a2;
 	border-radius: 0;
 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
 	font-size: 14px;
@@ -3497,7 +3501,7 @@ a.thumbnail-classic-title:hover {
 .comment-minimal__author {
 	font-size: 14px;
 	font-style: italic;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .comment-minimal__link {
@@ -3588,7 +3592,7 @@ a.thumbnail-classic-title:hover {
 .box-comment .box-comment__title {
 	font-size: 16px;
 	line-height: 1.625;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 992px) {
@@ -4085,7 +4089,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .post-link a:hover {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .post-link .post-classic-title + * {
@@ -4525,7 +4529,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .post-project .button-link:hover {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .post-project__body {
@@ -5508,7 +5512,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .context-dark .blurb-minimal, .bg-accent .blurb-minimal, .bg-gray-dark .blurb-minimal, .bg-black .blurb-minimal, .bg-gray-darker .blurb-minimal, .bg-gray-darkest .blurb-minimal, .bg-image-4 .blurb-minimal, .bg-image-6 .blurb-minimal, .bg-image-7 .blurb-minimal, .bg-image-8 .blurb-minimal {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .context-dark .countdown-default .countdown-section, .bg-accent .countdown-default .countdown-section, .bg-gray-dark .countdown-default .countdown-section, .bg-black .countdown-default .countdown-section, .bg-gray-darker .countdown-default .countdown-section, .bg-gray-darkest .countdown-default .countdown-section, .bg-image-4 .countdown-default .countdown-section, .bg-image-6 .countdown-default .countdown-section, .bg-image-7 .countdown-default .countdown-section, .bg-image-8 .countdown-default .countdown-section {
@@ -5634,7 +5638,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .context-dark .post-classic-title a:hover, .bg-accent .post-classic-title a:hover, .bg-gray-dark .post-classic-title a:hover, .bg-black .post-classic-title a:hover, .bg-gray-darker .post-classic-title a:hover, .bg-gray-darkest .post-classic-title a:hover, .bg-image-4 .post-classic-title a:hover, .bg-image-6 .post-classic-title a:hover, .bg-image-7 .post-classic-title a:hover, .bg-image-8 .post-classic-title a:hover {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .context-dark .post-meta a, .bg-accent .post-meta a, .bg-gray-dark .post-meta a, .bg-black .post-meta a, .bg-gray-darker .post-meta a, .bg-gray-darkest .post-meta a, .bg-image-4 .post-meta a, .bg-image-6 .post-meta a, .bg-image-7 .post-meta a, .bg-image-8 .post-meta a {
@@ -5642,11 +5646,11 @@ a.thumbnail-classic-title:hover {
 }
 
 .context-dark .post-meta a:hover, .bg-accent .post-meta a:hover, .bg-gray-dark .post-meta a:hover, .bg-black .post-meta a:hover, .bg-gray-darker .post-meta a:hover, .bg-gray-darkest .post-meta a:hover, .bg-image-4 .post-meta a:hover, .bg-image-6 .post-meta a:hover, .bg-image-7 .post-meta a:hover, .bg-image-8 .post-meta a:hover {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .context-light h1, .bg-gray-lighter h1, .context-light h2, .bg-gray-lighter h2, .context-light h3, .bg-gray-lighter h3, .context-light h4, .bg-gray-lighter h4, .context-light h5, .bg-gray-lighter h5, .context-light h6, .bg-gray-lighter h6, .context-light .heading-1, .bg-gray-lighter .heading-1, .context-light .heading-2, .bg-gray-lighter .heading-2, .context-light .heading-3, .bg-gray-lighter .heading-3, .context-light .heading-4, .bg-gray-lighter .heading-4, .context-light .heading-5, .bg-gray-lighter .heading-5, .context-light .heading-6, .bg-gray-lighter .heading-6 {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (max-width: 1199.98px) {
@@ -5739,7 +5743,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .bg-gray-dark {
-	background-color: #2a384e;
+	background-color: #0b092c;
 }
 
 .bg-gray-dark[class*='section-'] + .bg-gray-dark.section-md,
@@ -5759,7 +5763,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .bg-gray-darker {
-	background-color: #1F2845;
+	background-color: #3969a2;
 	color: #888;
 }
 
@@ -5888,7 +5892,7 @@ a.thumbnail-classic-title:hover {
 }
 
 .bg-accent-gradient {
-	background-image: linear-gradient(to right, #2a384e 5%, #3d5b8a);
+	background-image: linear-gradient(to right, #0b092c 5%, #3d5b8a);
 }
 
 section {
@@ -7658,7 +7662,7 @@ html:not(.lt-ie10) .not-animated {
 .isotope-filters .inline-list a {
 	position: relative;
 	transition: .3s;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 @media (min-width: 992px) {
@@ -8353,7 +8357,7 @@ h4 + .owl-carousel {
 	height: 48px;
 	line-height: 48px;
 	cursor: pointer;
-	color: #1F2845;
+	color: #3969a2;
 	display: none;
 }
 
@@ -8368,7 +8372,7 @@ h4 + .owl-carousel {
 	height: 4px;
 	line-height: 4px;
 	text-align: center;
-	background: #1F2845;
+	background: #3969a2;
 	left: 50%;
 	margin-left: -2px;
 	transition: .3s all ease;
@@ -8597,7 +8601,7 @@ h4 + .owl-carousel {
 .rd-navbar .rd-search .form-label {
 	font-size: 12px;
 	font-weight: 400;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar button.rd-search__submit,
@@ -8650,7 +8654,7 @@ h4 + .owl-carousel {
 	font-weight: 300;
 	text-transform: none;
 	line-height: 1.2;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar-fullwidth .rd-navbar-nav > .rd-navbar-submenu .rd-navbar-dropdown,
@@ -9081,7 +9085,7 @@ h4 + .owl-carousel {
 
 .rd-navbar-static .rd-navbar-top-panel-dark::before,
 .rd-navbar-sidebar .rd-navbar-top-panel-dark::before {
-	background: #1F2845;
+	background: #3969a2;
 }
 
 .ie-10 .rd-navbar-static .rd-navbar-top-panel__content > *,
@@ -9539,7 +9543,7 @@ h4 + .owl-carousel {
 .rd-navbar-fullwidth.rd-navbar_half-dark .rd-navbar-nav .rd-navbar-dropdown,
 .rd-navbar-fullwidth.rd-navbar_half-dark .rd-navbar-nav .rd-navbar-megamenu {
 	background: #1b2535;
-	border-color: #2a384e;
+	border-color: #0b092c;
 }
 
 .rd-navbar-static.rd-navbar_half-dark .rd-navbar-nav .rd-navbar-dropdown > li.focus > a,
@@ -9948,7 +9952,7 @@ h4 + .owl-carousel {
 .rd-navbar-static.rd-navbar_transparent .rd-navbar-inner {
 	padding-left: 30px;
 	padding-right: 30px;
-	background: #fff;
+	background: rgba(255, 255, 255, 0.9);
 	border-radius: 3px;
 }
 
@@ -10447,7 +10451,7 @@ h4 + .owl-carousel {
 }
 
 .rd-navbar-fixed .rd-navbar-brand img {
-	height: 24px;
+	height: 55px;
 	width: auto;
 }
 
@@ -10961,7 +10965,7 @@ html .page .rd-navbar-fixed .rd-navbar-fixed--hidden {
 
 .rd-navbar-fixed .rd-megamenu-list > li > a,
 .rd-navbar-fixed .rd-navbar-dropdown > li > a {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar-fixed .rd-megamenu-list:hover > a, .rd-navbar-fixed .rd-megamenu-list.focus > a, .rd-navbar-fixed .rd-megamenu-list.active > a, .rd-navbar-fixed .rd-megamenu-list.opened > a,
@@ -11017,7 +11021,7 @@ html .page .rd-navbar-fixed .rd-navbar-fixed--hidden {
 
 .rd-navbar-fixed.rd-navbar_half-dark .rd-megamenu-list > li > a,
 .rd-navbar-fixed.rd-navbar_half-dark .rd-navbar-dropdown > li > a {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar-fixed.rd-navbar_half-dark .rd-megamenu-list:hover > a, .rd-navbar-fixed.rd-navbar_half-dark .rd-megamenu-list.focus > a, .rd-navbar-fixed.rd-navbar_half-dark .rd-megamenu-list.active > a, .rd-navbar-fixed.rd-navbar_half-dark .rd-megamenu-list.opened > a,
@@ -11046,7 +11050,7 @@ html .page .rd-navbar-fixed .rd-navbar-fixed--hidden {
 }
 
 .rd-navbar-fixed.rd-navbar_half-dark .rd-navbar-submenu-toggle {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar-fixed.rd-navbar_dark .rd-navbar-toggle,
@@ -11369,7 +11373,7 @@ html.rd-navbar-fixed-linked .page {
 
 .rd-navbar-sidebar .rd-navbar-dropdown .rd-navbar-dropdown > li {
 	font-size: 13px;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-navbar-sidebar .rd-navbar-dropdown .rd-navbar-dropdown > li + li {
@@ -11713,7 +11717,7 @@ html.boxed .rd-navbar--is-clone {
 
 .rd-search-results-live #search-results {
 	padding: 16px 12px 12px;
-	border: 1px solid #2a384e;
+	border: 1px solid #0b092c;
 	border-radius: 0 0 3px 3px;
 	color: #888;
 	background: #fff;
@@ -11732,7 +11736,7 @@ html.boxed .rd-navbar--is-clone {
 	line-height: 30px;
 	letter-spacing: .06em;
 	text-transform: uppercase;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-search-results-live .search-list {
@@ -11833,7 +11837,7 @@ html.boxed .rd-navbar--is-clone {
 	position: relative;
 	padding-left: 40px;
 	font-size: 16px;
-	color: #1F2845;
+	color: #3969a2;
 }
 
 .rd-search-results .search-list-item:before {
@@ -11941,7 +11945,7 @@ html.boxed .rd-navbar--is-clone {
 }
 
 .search-form-classic .rd-search-submit:hover {
-	color: #1F2845;
+	color: #3969a2;
 }
 
 * + .search-form-classic {
@@ -11981,7 +11985,7 @@ html.boxed .rd-navbar--is-clone {
 
 .ui-to-top, .ui-to-top:active, .ui-to-top:focus {
 	color: #fff;
-	background: #66d7e6;
+	background: #3969a2;
 }
 
 .ui-to-top:hover {
@@ -13794,7 +13798,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 */
 .progress-linear {
 	position: relative;
-	color: #2a384e;
+	color: #0b092c;
 	text-align: left;
 }
 
@@ -13978,7 +13982,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 	line-height: 1.4;
 	letter-spacing: .06em;
 	text-transform: uppercase;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 * + .progress-bar-circle-title {
@@ -14104,7 +14108,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 	padding: 0;
 	/* Fix of Webkit flickering */
 	z-index: 1;
-	background-color: #1F2845;
+	background-color: #fff;
 }
 
 .swiper-container-no-flexbox .swiper-slide {
@@ -14830,7 +14834,7 @@ button.swiper-pagination-bullet {
 	cursor: pointer;
 	color: #fff;
 	transition: .33s;
-	background-color: #2a384e;
+	background-color: #0b092c;
 }
 
 .swiper-slider .swiper-button-prev::before,
@@ -15354,7 +15358,7 @@ button.swiper-pagination-bullet {
 	vertical-align: middle;
 	text-transform: uppercase;
 	transition: .3s all ease;
-	background-color: #2a384e;
+	background-color: #0b092c;
 }
 
 .tabs-custom .nav-custom-tabs a:hover,
@@ -15456,7 +15460,7 @@ button.swiper-pagination-bullet {
 	}
 	.tabs-custom.tabs-vertical .nav-custom-tabs li.active a,
 	.tabs-custom.tabs-vertical .nav-custom-tabs li:hover a {
-		color: #2a384e;
+		color: #0b092c;
 		background-color: #e0e0e2;
 	}
 	.tabs-custom.tabs-vertical .nav-custom-tabs li + li {
@@ -16673,11 +16677,11 @@ button.swiper-pagination-bullet {
 }
 
 .dtp-picker-time > a.dtp-select-hour.disabled {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .dtp-picker-time > a.dtp-select-minute.disabled {
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .dtp-picker-time > a.dtp-select-minute.selected {
@@ -16695,7 +16699,7 @@ button.swiper-pagination-bullet {
 .dtp-clock-center {
 	width: 15px;
 	height: 15px;
-	background: #2a384e;
+	background: #0b092c;
 	border-radius: 50%;
 	position: absolute;
 	z-index: 50;
@@ -16709,7 +16713,7 @@ html[class*="ie"] .dtp-clock-center {
 	position: absolute;
 	width: 4px;
 	margin-left: -2px;
-	background: #2a384e;
+	background: #0b092c;
 	transform: rotate(0deg);
 	transform-origin: bottom;
 	z-index: 1;
@@ -17088,7 +17092,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 	padding-left: 50px;
 	font-size: 24px;
 	font-weight: 400;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .rd-audio-playlist .audio-track .author:before {
@@ -17107,7 +17111,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 	left: 50%;
 	transform: translateX(-50%);
 	width: 50%;
-	border-bottom: 2px solid #2a384e;
+	border-bottom: 2px solid #0b092c;
 	transition: .3s;
 	opacity: 0;
 }
@@ -17171,7 +17175,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 	max-width: 100%;
 	padding: 5px 8px;
 	color: #fff;
-	background: #1F2845;
+	background: #3969a2;
 	box-shadow: none;
 }
 
@@ -17787,7 +17791,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 	font-size: 12px;
 	font-family: "Linearicons";
 	cursor: pointer;
-	color: #2a384e;
+	color: #0b092c;
 	transition: .3s all ease;
 }
 
@@ -17896,7 +17900,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 
 .select2-dropdown {
 	background-color: #fff;
-	border: 1px solid #2a384e;
+	border: 1px solid #0b092c;
 	border-radius: 4px;
 	box-sizing: border-box;
 	display: block;
@@ -18060,7 +18064,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 
 .select2-container--bootstrap .select2-results__option--highlighted[aria-selected] {
 	background-color: #f6980b;
-	color: #2a384e;
+	color: #0b092c;
 }
 
 .select2-container--bootstrap .select2-results__option .select2-results__option {
@@ -18107,7 +18111,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 }
 
 .select2-container--bootstrap .select2-selection__clear {
-	color: #2a384e;
+	color: #0b092c;
 	cursor: pointer;
 	float: right;
 	font-weight: 400;
@@ -18224,7 +18228,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 }
 
 .select2-container--bootstrap .select2-selection--multiple .select2-selection__choice__remove {
-	color: #2a384e;
+	color: #0b092c;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: bold;
@@ -18659,7 +18663,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 
 .card-custom {
 	padding: 22px 15px 20px;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
 @media (min-width: 768px) {
@@ -18677,7 +18681,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 	display: block;
 	position: relative;
 	padding-right: 40px;
-	color: #2a384e;
+	color: #0b092c;
 	background: transparent;
 	transition: .3s all ease;
 }
@@ -18928,7 +18932,7 @@ h3 + .card-custom-group-wrap {
 	width: 90%;
 	height: 90%;
 	border-radius: 50%;
-	border: 3px solid #1F2845;
+	border: 3px solid #3969a2;
 	pointer-events: none;
 	user-select: none;
 }
@@ -18946,7 +18950,7 @@ h3 + .card-custom-group-wrap {
 	border-radius: 50%;
 	pointer-events: auto;
 	transition: .3s;
-	background-color: #1F2845;
+	background-color: #3969a2;
 	font-size: 14px;
 	color: rgba(255, 255, 255, 0.5);
 }
